added grid current player & is active variables

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="title">
             <h1>Tic-Tac-Toe</h1>
         </div>
-        <div class="display-player-box">
+        <div class="player-box">
             Player <span class="display-player playerX">X</span>'s turn!
         </div>
         <div class="grid">
@@ -30,7 +30,7 @@
         <div class="controls">
             <button id="reset">Reset</button>
         </div>
-        <div class="image"></div>
     </main>
+    <footer> Created by Saul Cortes</footer>
 </body>
 </html>
