--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <div class="title">
             <h1>Tic-Tac-Toe</h1>
         </div>
-        <div class="player-box">
-            Player <span class="display-player playerX">X</span>'s turn!
+        <div class="status-box">
+            Player <span class="display-player playerX">X</span>'s turn
         </div>
         <div class="grid">
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
+            <div data-cell-index="0" class="tile"></div>
+            <div data-cell-index="1" class="tile"></div>
+            <div data-cell-index="2" class="tile"></div>
+            <div data-cell-index="3" class="tile"></div>
+            <div data-cell-index="4" class="tile"></div>
+            <div data-cell-index="5" class="tile"></div>
+            <div data-cell-index="6" class="tile"></div>
+            <div data-cell-index="7" class="tile"></div>
+            <div data-cell-index="8" class="tile"></div>
         </div>
         <div class="display announcer hide"></div>
         <div class="controls">
