--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="tile"></div>
             <div class="tile"></div>
         </div>
-        <div class="display displayr hide"></div>
+        <div class="display displayResult"></div>
         <div class="controls">
             <button id="reset">Reset</button>
         </div>
