--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
             <button id="reset">Reset</button>
         </div>
     </main>
-    <footer> Created by Saul Cortes</footer>
+    <footer> Created by Saul Cortes - Thank you for playing :)</footer>
 </body>
 </html>
