--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
             <button id="reset">Reset</button>
         </div>
     </main>
-    <footer> Created by Saul Cortes - Thank you for playing :)</footer>
+    <footer> 
+        Created by 
+            <a 
+                href="https://github.com/inscious" 
+                target="_blank"
+                >
+                    Saul Cortes
+            </a> 
+                - Thank you for playing :)
+    </footer>
 </body>
 </html>
